# cadishi

./: .gitattributes  .gitignore  .gitlab-ci.yml  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  README.rst  cadishi.bash  setup.cfg  setup.py
aux/: json2yaml.py  md_to_cadishi.py  yaml2json.py
cadishi/: __init__.py  base.py  dict_util.py  dictfs.py  h5pickle.py  pbc.py  util.py  version.py  worker.py
cadishi/data/: histograms_template.yaml
cadishi/exe/: __init__.py  check_parameter_file.py  cli.py  histograms.py  histograms_example.py  histograms_legacy.py  json2yaml.py  md_to_cadishi.py  merge.py  random_trajectory.py  unpack.py  yaml2json.py
cadishi/io/: ascii.py  dummy.py  hdf5.py  md.py  pickel.py
cadishi/kernel/: Makefile  README  __init__.py  c_cudh.cpp  c_cudh.cu  c_cudh.pyx  c_cudh_functions.cu  c_cudh_interface.cpp  c_cudh_interface.pyx  c_dist.c  c_dist.pyx  c_pydh.cc  c_pydh.cpp  c_pydh.h  c_pydh.pyx  c_pydh_functions.cc  c_pydh_interface.cpp  c_pydh_interface.pyx  common.py  cudh.py  dist.py  pydh.py  pydh_interface.cpp  pydh_interface.pyx  unit_tests.cc
cadishi/kernel/include/: c_cudh.h  c_pydh.h  common.h  common.hpp  config.h  config.hpp  cuda_exceptions.hpp  cudh.h  exceptions.hpp  pydh.h
cadishi/tests/: __init__.py  minimal_driver.py  perf_kernel.py  run_tests.sh  test_base_container.py  test_dict_util.py  test_dictfs.py  test_h5pickle.py  test_pydh_cudh.py  test_pydh_dist.py  test_pydh_triclinic.py  test_util_generate_random.py
conda/: README  build.sh  conda_build.sh  meta.yaml
conda/recipe/: build.sh  meta.yaml
doc/: Makefile  README  conf.py  executables.rst  index.rst  kernel.rst  modules.rst
doc/html/: .buildinfo  executables.html  genindex.html  index.html  kernel.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/html/_downloads/: plot_hdf5_data.py
doc/html/_modules/: index.html
doc/html/_sources/: executables.rst.txt  index.rst.txt  kernel.rst.txt  (+1 more)
doc/scripts/: input_example.py
scripts/: README  create_tarball.sh  pypi_upload_helper.sh  setup_develop_local.sh  setup_install_local.sh  setup_install_phys.sh  setup_sphinx_doc.sh  update_git_hash.py
(+19 files in other folders)
