# --- Cadishi build defaults used by setup.py ---
# note: comments must start on a separate line (unfortunately)


[options]

# use debug compiler flags, disable any optimizations
debug = False

# switch on/off OpenMP build
openmp = True

# switch on/off build of CUDA code
cuda = True

# use safe generic CUDA compiler flags, disable architecture-specific code generation
safe_cuda_flags = False

[build_sphinx]
all-files = 1
source-dir = doc/
build-dir = doc/html
#warning_is_error = 1  # only possible with sphinx >= 1.5

