# --- Cadishi build defaults used by setup.py ---
# note: comments must start on a separate line (unfortunately)


[options]
# use debug compiler flags, disable any optimizations
debug = False
# Enable specific GCC optimizations for the CPU in the current host on which the
# compilation is run.  Note that the generated binaries will only run on the
# same (or most likely on newer) CPU generation(s).
# On x86_64 CPUs this flag is necessary to enable SIMD vectorization levels
# wider than 128 bits, such as AVX, AVX2, AVX512. Without this flag, the default
# on x86_64 CPUs is SSE4.2 which provides fast round() instructions.
gcc_native = False
# switch on/off OpenMP build
openmp = True
# switch on/off build of CUDA code
cuda = True
# use safe generic CUDA compiler flags, disable architecture-specific code generation
safe_cuda_flags = False


[build_ext]
inplace=1


[build_sphinx]
all-files = 1
source-dir = doc/
build-dir = doc/
# the following option is available with sphinx >= 1.5
warning_is_error = 1
